# Netshell

./: .gitignore  LICENSE  README.md  alias.sh  httpshell.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/netshell/: main.py
test/: Dockerfile  docker-compose.yaml  flag.txt  requirements.txt  testserver.py
